@@ -12,6 +12,10 @@ module Tracksperanto
   module Middleware; end
   module Pipeline; end
   
+  class UnknownExporter < NameError; end
+  class UnknownImporter < NameError; end
+  class UnknownMiddleware < NameError; end
+  
   class << self
     # Returns the array of all exporter classes defined
     attr_accessor :exporters
@@ -46,7 +50,7 @@ module Tracksperanto
       return x if x.const_name.downcase == name.downcase
     end
     
-    raise NameError, "Unknown middleware #{name}"
+    raise UnknownMiddleware, "Unknown middleware #{name.inspect}"
   end
     
   # Case-insensitive search for an export module by name
@@ -55,7 +59,7 @@ module Tracksperanto
       return x if x.const_name.downcase == name.downcase
     end
     
-    raise NameError, "Unknown exporter #{name}"
+    raise UnknownExporter, "Unknown exporter #{name.inspect}"
   end
   
   # Case-insensitive search for an export module by name
@@ -64,7 +68,7 @@ module Tracksperanto
       return x if x.const_name.downcase == name.downcase
     end
     
-    raise NameError, "Unknown importer #{name}"
+    raise UnknownImporter, "Unknown importer #{name.inspect}"
   end
 end
 
