@@ -44,6 +44,20 @@ class CliTest < Test::Unit::TestCase
     assert_same_set fs, Dir.entries(TEMP_DIR)
   end
   
+  def test_cli_with_nonexisting_only_exporter_prints_proper_error_message
+    status, o, e = cli("--only microsoftfuckingword " + TEMP_DIR + "/flm.stabilizer")
+    assert_equal 2, status, "Should exit with abnormal state"
+    assert e.include?("Unknown exporter \"microsoftfuckingword\"")
+    assert e.include?("The following export modules are available")
+  end
+  
+  def test_cli_with_nonexisting_importer_prints_proper_error_message
+    status, o, e = cli("--from microsoftfuckingword " + TEMP_DIR + "/flm.stabilizer")
+    assert_equal 2, status, "Should exit with abnormal state"
+    assert e.include?("Unknown importer \"microsoftfuckingword\"")
+    assert e.include?("The following import modules are available")
+  end
+  
   def test_cli_with_only_option
     FileUtils.cp(File.dirname(__FILE__) + "/import/samples/flame_stabilizer/fromCombustion_fromMidClip_wSnap.stabilizer", TEMP_DIR + "/flm.stabilizer")
     cli("#{BIN_P} --only syntheyes #{TEMP_DIR}/flm.stabilizer")
